clusters/k8s-vms-daniele/apps/fluxcd/webhook-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    external-dns.kubernetes.io/managed-by: external-dns
    external-dns.kubernetes.io/cloudflare-proxied: "true"
    external-dns.kubernetes.io/target: ${CLOUDFLARE_TUNNEL_TARGET}
spec:
  ingressClassName: traefik
  tls:
    - secretName: flux-webhook-tls
      hosts:
        - ${FLUX_WEBHOOK_HOST:=flux-webhook.invalid.example}
  rules:
    - host: ${FLUX_WEBHOOK_HOST:=flux-webhook.invalid.example}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
